2004-11-26  Petr Stehlik  <pstehlik@sophics.cz>
* rt-config.c: fixed many possible buffer overflows that were dangerous if
  atari800 was installed suid root. Thanks for analysis go to Adam Zabrocki.

2004-11-17  Perry McFarlane  <perry_m@fastmail.fm>
* antic.c: Fix for Timeslip game.  Newcycleexact dmactl change bug.

2004-09-24  Sebastian Bauer
* ui_basic.c: fixed NULL pointer access in file dialog which happened if there
  were no files in the selected directory.

* amiga/*: updated


** 1.3.3 released

2004-08-08  Petr Stehlik  <pstehlik@sophics.cz>
* various files: updated for 1.3.3 release


2004-08-05  Christian Groessler <cpg@aladdin.de>
* atari_x11.c: adds the left ctrl key as joystick button if "-keypad" is
  in use. Also cleans up mostly by adding ANSI C function headers.


2004-07-26  Sebastian Bauer
* amiga/*: major update, cleanup, fixed console keys, upgraded sound support


2004-07-05  Petr Stehlik  <pstehlik@sophics.cz>
* configure.ac: Ken Ames sent a patch that supports OS/2


2004-06-06  Petr Stehlik  <pstehlik@sophics.cz>
* atari_x11.c: Christian Groessler's patch adds missing keyboard autorepeat
  when in the internal Atari800 debugger.

* prompts.c: fixed RemoveSpaces() - should not remove space from within
  the string, only leading and trailing space chars should be removed.

* rt-config.c, configure.ac: SUPPORTS_ATARI_CONFIG* now set in configure.ac
  for DOSVGA and SDL. This also fixes joystick definition not loaded in
  the DOSVGA port since the #ifdef VGA was changed to #ifdef DOSVGA.

* atari_sdl.c: emulated joysticks configured in the atari800.cfg file
  thanks to patch from Benny (Fishy_PKAT151). This is incompatible
  with the DOS VGA port configuration so I expect this to change
  before 1.3.3 release.

* rt-config.c: RemoveSpaces() called on both keyword and its value.

* rt-config.c, atari_sdl.c: bunch of Aprint() cleaned up


2004-06-04  Petr Stehlik  <pstehlik@sophics.cz>